--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -1414,6 +1414,42 @@ pre code {
     border-bottom: 1px solid #e2e2e2;
     box-shadow: 0px 1px 0px 0px rgba(0,0,0,0.04);
 }
+
+.rotate90{
+    /* Safari */
+    -webkit-transform: rotate(90deg);
+
+    /* Firefox */
+    -moz-transform: rotate(90deg);
+
+    /* IE */
+    -ms-transform: rotate(90deg);
+
+    /* Opera */
+    -o-transform: rotate(90deg);
+
+    /* Internet Explorer */
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=1);
+    margin-top: 500px;
+}
+
+.rotate-90{
+    /* Safari */
+    -webkit-transform: rotate(-90deg);
+
+    /* Firefox */
+    -moz-transform: rotate(-90deg);
+
+    /* IE */
+    -ms-transform: rotate(-90deg);
+
+    /* Opera */
+    -o-transform: rotate(-90deg);
+
+    /* Internet Explorer */
+    filter: progid:DXImageTransform.Microsoft.BasicImage(rotation=3);
+}
+
 @media (min-width: 768px) {
     .container {
         width: 750px;
