--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4397,7 +4397,6 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
     display: inline-block;
     padding-left: 0;
     margin: 20px 0;
-    border-radius: 4px;
 }
 .pagination > li {
     display: inline;
@@ -4417,13 +4416,9 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination > li:first-child > a,
 .pagination > li:first-child > span {
     margin-left: 0;
-    border-bottom-left-radius: 4px;
-    border-top-left-radius: 4px;
 }
 .pagination > li:last-child > a,
 .pagination > li:last-child > span {
-    border-bottom-right-radius: 4px;
-    border-top-right-radius: 4px;
 }
 .pagination > li > a:hover,
 .pagination > li > span:hover,
@@ -4485,6 +4480,9 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
 .pagination-sm > li:last-child > span {
     border-bottom-right-radius: 3px;
     border-top-right-radius: 3px;
+}
+.pagination-centered {
+  text-align: center;
 }
 .pager {
     padding-left: 0;
