--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4482,7 +4482,7 @@ fieldset[disabled] .navbar-inverse .btn-link:focus {
     border-top-right-radius: 3px;
 }
 .pagination-centered {
-  text-align: center;
+    text-align: center;
 }
 .pager {
     padding-left: 0;
@@ -6294,4 +6294,74 @@ button.close {
     background-color: #eeeeee;
     color: #333333;
 }
-
+.custom1{
+    height: 50px; padding-top: 5px;
+}
+.custom2{
+    font-size: 24px; vertical-align: -13%;
+}
+.custom3{
+    font-size: 25px;
+}
+.thumbnail {
+    position:relative;
+    overflow:hidden;
+}
+.caption {
+    position:absolute;
+    top:0;
+    right:0;
+    background:rgba(71, 143, 209, 0.90);
+    width:100%;
+    height:100%;
+    padding:2%;
+    display: none;
+    text-align:center;
+    color:#fff !important;
+    z-index:2;
+}
+div.clear
+{
+    clear: both;
+}
+div.product-chooser.disabled div.product-chooser-item
+{
+    zoom: 1;
+    filter: alpha(opacity=60);
+    opacity: 0.6;
+    cursor: default;
+}
+div.product-chooser div.product-chooser-item{
+    padding: 11px;
+    cursor: pointer;
+    position: relative;
+    border: 1px solid #efefef;
+    margin-bottom: 5px;
+    margin-left: 5px;
+    margin-right: 5px;
+}
+div.product-chooser div.product-chooser-item.selected{
+    border: 4px solid #428bca;
+    background: #fff;
+    padding: 8px;
+    filter: alpha(opacity=100);
+    opacity: 1;
+}
+div.product-chooser div.product-chooser-item img{
+    padding: 0;
+}
+div.product-chooser div.product-chooser-item span.title{
+    display: block;
+    margin: 10px 0 5px 0;
+    font-weight: bold;
+    font-size: 12px;
+}
+div.product-chooser div.product-chooser-item span.description{
+    font-size: 14px;
+}
+div.product-chooser div.product-chooser-item input{
+    position: absolute;
+    left: 0;
+    top: 0;
+    visibility:hidden;
+}
