bug fixes, addimage, car

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6365,3 +6365,6 @@ div.product-chooser div.product-chooser-item input{
     top: 0;
     visibility:hidden;
 }
+.minus30{
+    margin-top: -40px;
+}
