--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6380,8 +6380,17 @@ div.product-chooser div.product-chooser-item input{
     position:fixed;
     top:0;
     left:0;
-    z-index:999;
-}div[class*=loader]{
+    z-index:99999;
+    color: #fff;
+    text-align: center;
+}
+.load-content{
+    position: relative;
+    width: 80%; 
+    margin: 0 auto; 
+    top: 40%;
+}
+div[class*=loader]{
     display:none;
 }
 .load-bar {
