--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4690,7 +4690,7 @@ a.thumbnail.active {
 }
 .thumbnail .caption {
     padding: 9px;
-    color: #333333;
+    color: #333333 !important;
 }
 .alert {
     padding: 15px;
@@ -6308,14 +6308,12 @@ button.close {
     overflow:hidden;
 }
 .caption {
-    position:absolute;
     top:0;
     right:0;
-    background:rgba(71, 143, 209, 0.90);
+    color: #333333 !important;
     width:100%;
     height:100%;
     padding:2%;
-    display: none;
     text-align:center;
     color:#fff !important;
     z-index:2;
@@ -6394,33 +6392,44 @@ div[class*=loader]{
     display:none;
 }
 .load-bar {
-  position: relative;
-  margin-top: 5px;
-  width: 100%;
-  height: 6px;
-  background-color: #d9534f;
-  margin-bottom: 10px;
+    position: relative;
+    margin-top: 5px;
+    width: 100%;
+    height: 6px;
+    background-color: #d9534f;
+    margin-bottom: 10px;
 }
 .bar {
-  content: "";
-  display: inline;
-  position: absolute;
-  width: 0;
-  height: 100%;
-  left: 50%;
-  text-align: center;
+    content: "";
+    display: inline;
+    position: absolute;
+    width: 0;
+    height: 100%;
+    left: 50%;
+    text-align: center;
 }
 .bar:nth-child(1) {
-  background-color: #428bca;
-  animation: loading 3s linear infinite;
+    background-color: #428bca;
+    -webkit-animation: loading 3s linear infinite;
+    -moz-animation: loading 3s linear 0s infinite;
+    animation: loading 3s linear infinite;
 }
 .bar:nth-child(2) {
-  background-color: #d9534f;
-  animation: loading 3s linear 1s infinite;
+    background-color: #d9534f;
+    -webkit-animation: loading 3s linear 1s infinite;
+    -moz-animation: loading 3s linear 1s infinite;
+    animation: loading 3s linear 1s infinite;
 }
 .bar:nth-child(3) {
-  background-color: #5cb85c;
-  animation: loading 3s linear 2s infinite;
+    background-color: #5cb85c;
+    -webkit-animation: loading 3s linear 2s infinite;
+    -moz-animation: loading 3s linear 2s infinite;
+    animation: loading 3s linear 2s infinite;
+}
+@-webkit-keyframes loading {
+    from {left: 50%; width: 0;z-index:100;}
+    33.3333% {left: 0; width: 100%;z-index: 10;}
+    to {left: 0; width: 100%;}
 }
 @keyframes loading {
     from {left: 50%; width: 0;z-index:100;}
