--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7079,58 +7079,74 @@ div[class*=loader]{
 }
 .selectboxit-list > .selectboxit-disabled > .selectboxit-option-anchor {color: #999999;}
 .ekko-lightbox-container {
-  position: relative;
+    position: relative;
 }
 
 .ekko-lightbox-nav-overlay {
-  position: absolute;
-  top: 0;
-  left: 0;
-  z-index: 100;
-  width: 100%;
-  height: 100%;
+    position: absolute;
+    top: 0;
+    left: 0;
+    z-index: 100;
+    width: 100%;
+    height: 100%;
 }
 
 .ekko-lightbox-nav-overlay a {
-  z-index: 100;
-  display: block;
-  width: 49%;
-  height: 100%;
-  padding-top: 45%;
-  font-size: 30px;
-  color: #fff;
-  text-shadow: 2px 2px 4px #000;
-  opacity: 0;
-  filter: dropshadow(color=#000000, offx=2, offy=2);
-  -webkit-transition: opacity 0.5s;
-     -moz-transition: opacity 0.5s;
-       -o-transition: opacity 0.5s;
-          transition: opacity 0.5s;
+    z-index: 100;
+    display: block;
+    width: 49%;
+    height: 100%;
+    padding-top: 45%;
+    font-size: 30px;
+    color: #fff;
+    text-shadow: 2px 2px 4px #000;
+    opacity: 0;
+    filter: dropshadow(color=#000000, offx=2, offy=2);
+    -webkit-transition: opacity 0.5s;
+    -moz-transition: opacity 0.5s;
+    -o-transition: opacity 0.5s;
+    transition: opacity 0.5s;
 }
 
 .ekko-lightbox-nav-overlay a:empty {
-  width: 49%;
+    width: 49%;
 }
 
 .ekko-lightbox a:hover {
-  text-decoration: none;
-  opacity: 1;
+    text-decoration: none;
+    opacity: 1;
 }
 
 .ekko-lightbox .glyphicon-chevron-left {
-  left: 0;
-  float: left;
-  padding-left: 15px;
-  text-align: left;
+    left: 0;
+    float: left;
+    padding-left: 15px;
+    text-align: left;
 }
 
 .ekko-lightbox .glyphicon-chevron-right {
-  right: 0;
-  float: right;
-  padding-right: 15px;
-  text-align: right;
+    right: 0;
+    float: right;
+    padding-right: 15px;
+    text-align: right;
 }
 
 .ekko-lightbox .modal-footer {
-  text-align: left;
+    text-align: left;
+}
+
+#totop{
+    padding: 5px 10px;
+    background: rgba(0,0,0,0.7);
+    color: white;
+    position: fixed;
+    bottom: 10px;
+    right: 10px;
+    cursor:pointer;
+    -moz-transform: rotate(90deg);
+    -webkit-transform: rotate(90deg);
+    -o-transform:rotate(90deg);
+    -ms-transform:rotate(90deg);
+    font-size: 24px;
+    display: none;
 }
