--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -7167,6 +7167,11 @@ div[class*=loader]{
 .stepwizard-step button[disabled] {
     opacity: 1 !important;
     filter: alpha(opacity=100) !important;
+        
+}
+
+.stepwizard-step button,.stepwizard-step a{
+    font-size: 20px;
 }
 
 .stepwizard-row:before {
