--- a/css/carparts-font.css
+++ b/css/carparts-font.css
@@ -36,7 +36,6 @@
     -webkit-font-smoothing: antialiased;
     vertical-align: -13%;
 }
-
 .icon-check:before {
   content: "a";
 }
@@ -441,4 +440,16 @@
 }
 .icon-angle-left:before {
   content: "\e028";
+}
+.icon-credit-card-2:before {
+  content: "\e029";
+}
+.icon-credit-card-3:before {
+  content: "\e02a";
+}
+.icon-wallet-money:before {
+  content: "\e02b";
+}
+.icon-banknote:before {
+  content: "\e02c";
 }
