--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8934,3 +8934,128 @@ ul.wysihtml5-toolbar div[data-wysihtml5-command-value="orange"] {
     width: 96%;
     text-align: left;
 }
+.card-panel {
+    padding: 20px;
+    margin: 0.5rem 0 1rem 0;
+    background-clip: padding-box;
+    background-color: #fff; }
+.card {
+    position: relative;
+    margin: 0.5rem 0 1rem 0;
+    background-color: #fff;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box;
+    background-clip: padding-box; 
+    -webkit-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    -moz-box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+    box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
+}
+.card .card-title {
+    color: #fff;
+    font-size: 24px;
+    font-weight: 300;
+    text-shadow: 0 0 3px #000;
+}
+.card .card-title.activator {
+    cursor: pointer; }
+.card a {
+    margin-right: 20px;
+    text-transform: uppercase; }
+.card.small, .card.medium, .card.large {
+    position: relative; }
+.card.small .card-image, .card.medium .card-image, .card.large .card-image {
+    overflow: hidden; }
+.card.small .card-content, .card.medium .card-content, .card.large .card-content {
+    overflow: hidden; }
+.card.small .card-action, .card.medium .card-action, .card.large .card-action {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    right: 0; }
+.card.small {
+    height: 300px; }
+.card.small .card-image {
+    height: 150px; }
+.card.small .card-content {
+    height: 150px; }
+.card.medium {
+    height: 400px; }
+.card.medium .card-image {
+    height: 250px; }
+.card.medium .card-content {
+    height: 150px; }
+.card.large {
+    height: 500px; }
+.card.large .card-image {
+    height: 330px; }
+.card.large .card-content {
+    height: 170px; }
+.card .card-image {
+    position: relative; }
+.card .card-image img {
+    background-clip: padding-box;
+    position: relative;
+    left: 0;
+    right: 0;
+    top: 0;
+    bottom: 0;
+    width: 100%; }
+.card .card-image .card-title {
+    position: absolute;
+    bottom: 0;
+    left: 0;
+    padding: 20px; }
+.card .card-content {
+    padding: 20px;
+    background-clip: padding-box;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box; }
+.card .card-content p {
+    margin: 0;
+    color: inherit; }
+.card .card-content .card-title {
+    line-height: 48px; }
+.card .card-action {
+    border-top: 1px solid rgba(160, 160, 160, 0.2);
+    padding: 20px; }
+.card .card-reveal {
+    padding: 20px;
+    position: absolute;
+    background-color: #FFF;
+    width: 100%;
+    overflow-y: auto;
+    top: 100%;
+    height: 100%;
+    z-index: 1;
+    -webkit-box-sizing: border-box;
+    -moz-box-sizing: border-box;
+    box-sizing: border-box; }
+.card .card-reveal .card-title {
+    cursor: pointer;
+    display: block; }
+.vertical-dev{
+    width: 1px;
+    border-left: 1px solid rgba(160, 160, 160, 0.2);
+    height: 60px;
+    position: absolute;
+    left: 50%;
+    bottom: 0px;
+}
+.ico{
+    margin-top: -5px;
+    font-size: 22px;
+}
+.left-icon{
+    position: absolute; 
+    left: 25%;
+}
+.right-icon{
+    position: absolute; 
+    left: 75%;
+}
+.price{
+    font-size: 24px;
+    color: #428bca;
+}
