--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -4664,6 +4664,7 @@ a.list-group-item.active > .badge,
     -webkit-transition: all 0.2s ease-in-out;
     -o-transition: all 0.2s ease-in-out;
     transition: all 0.2s ease-in-out;
+    position: relative;
 }
 .thumbnail > img,
 .thumbnail a > img {
@@ -8941,10 +8942,10 @@ ul.wysihtml5-toolbar div[data-wysihtml5-command-value="orange"] {
     box-shadow: 0 2px 5px 0 rgba(0, 0, 0, 0.16), 0 2px 10px 0 rgba(0, 0, 0, 0.12);
 }
 .card .card-title {
-    color: #fff;
     font-size: 24px;
     font-weight: 300;
-    text-shadow: 0 0 3px #000;
+    color: white;
+    text-shadow: 0px 1px 2px #000;
 }
 .card .card-title.activator {
     cursor: pointer; }
@@ -9024,6 +9025,13 @@ ul.wysihtml5-toolbar div[data-wysihtml5-command-value="orange"] {
 .card .card-reveal .card-title {
     cursor: pointer;
     display: block; }
+.card-price{
+    color: #fff;
+    background: #428bca;
+    padding: 5px 10px;
+    margin-left: 20px;
+    font-weight: 600;
+}
 .vertical-dev{
     width: 1px;
     border-left: 1px solid rgba(160, 160, 160, 0.2);
@@ -9051,4 +9059,79 @@ ul.wysihtml5-toolbar div[data-wysihtml5-command-value="orange"] {
 .price{
     font-size: 24px;
     color: #428bca;
+}
+.ribbon {
+    -moz-box-shadow:0 1px 1px rgba(0,0,0,0.2);
+    -webkit-box-shadow:0 1px 1px rgba(0,0,0,0.2);
+    box-shadow:0 1px 1px rgba(0,0,0,0.2);
+    -moz-transform:translate3d(0,0,1px) rotate(45deg);
+    -ms-transform:translate3d(0,0,1px) rotate(45deg);
+    -webkit-transform:translate3d(0,0,1px) rotate(45deg);
+    transform:translate3d(0,0,1px) rotate(45deg);
+    -moz-backface-visibility:hidden;
+    -webkit-backface-visibility:hidden;
+    backface-visibility:hidden;
+    background-color:#428bca;
+    color:#fff;
+    font-weight:bold;
+    font-size:12px;
+    padding:6px;
+    position:absolute;
+    z-index:3;
+    right:-30px;
+    top:15px;
+    width:120px;
+    text-align:center;
+    margin:auto;
+    height:30px;
+    bottom:inherit;
+    left:inherit;
+}
+.left-ribbon {
+    -moz-box-shadow:0 1px 1px rgba(0,0,0,0.2);
+    -webkit-box-shadow:0 1px 1px rgba(0,0,0,0.2);
+    box-shadow:0 1px 1px rgba(0,0,0,0.2);
+    -moz-transform:translate3d(0,0,1px) rotate(-45deg);
+    -ms-transform:translate3d(0,0,1px) rotate(-45deg);
+    -webkit-transform:translate3d(0,0,1px) rotate(-45deg);
+    transform:translate3d(0,0,1px) rotate(-45deg);
+    -moz-backface-visibility:hidden;
+    -webkit-backface-visibility:hidden;
+    backface-visibility:hidden;
+    background-color:#428bca;
+    color:#fff;
+    font-weight:bold;
+    font-size:12px;
+    padding:6px;
+    position:absolute;
+    z-index:3;
+    left:-30px;
+    top:15px;
+    width:120px;
+    text-align:center;
+    margin:auto;
+    height:30px;
+    bottom:inherit;
+    right:inherit;
+}
+.card-caption{
+    color: transparent;
+    text-shadow: 0 0 5px rgba(0,0,0,0.5);
+}
+
+.card-caption a{
+    margin-left: 20px;
+    font-size: 24px;
+    color: white;
+}
+.btn-product{
+    width: 100%;
+}
+.btn-down{
+    width: 100%;
+    position: absolute;
+    bottom: 10px;
+}
+.thumbnail p{
+    margin-bottom: 40px;
 }
