--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -9088,6 +9088,33 @@ ul.wysihtml5-toolbar div[data-wysihtml5-command-value="orange"] {
     bottom:inherit;
     left:inherit;
 }
+.red-ribbon {
+    -moz-box-shadow:0 1px 1px rgba(0,0,0,0.2);
+    -webkit-box-shadow:0 1px 1px rgba(0,0,0,0.2);
+    box-shadow:0 1px 1px rgba(0,0,0,0.2);
+    -moz-transform:translate3d(0,0,1px) rotate(45deg);
+    -ms-transform:translate3d(0,0,1px) rotate(45deg);
+    -webkit-transform:translate3d(0,0,1px) rotate(45deg);
+    transform:translate3d(0,0,1px) rotate(45deg);
+    -moz-backface-visibility:hidden;
+    -webkit-backface-visibility:hidden;
+    backface-visibility:hidden;
+    background-color:#d9534f;
+    color:#fff;
+    font-weight:bold;
+    font-size:10px;
+    padding:8px;
+    position:absolute;
+    z-index:3;
+    right:-30px;
+    top:15px;
+    width:120px;
+    text-align:center;
+    margin:auto;
+    height:30px;
+    bottom:inherit;
+    left:inherit;
+}
 .left-ribbon {
     -moz-box-shadow:0 1px 1px rgba(0,0,0,0.2);
     -webkit-box-shadow:0 1px 1px rgba(0,0,0,0.2);
