--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -6275,7 +6275,7 @@ button.close {
     height: 50px; padding-top: 5px;
 }
 .custom2{
-    font-size: 24px; vertical-align: -13%;
+    font-size: 24px;
 }
 .custom3{
     font-size: 25px;
