--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -11372,3 +11372,9 @@ a.no-hover:hover {
     top: -7px;
     margin-left: -8px
 }
+
+span[data-placeholder-for]{
+    display: inline-block;
+    margin-top: 5px;
+    font-weight: bold;
+}
